--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -156,8 +156,7 @@
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
-            <th></th>
-            <th>Event</th>
+            <th colspan="2">Event</th>
             <th>Speakers</th>
             <% if item[:rooms].size > 1 %>
             <th>Room</th>
