--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -1,14 +1,13 @@
 <%
 # vim: set ft=eruby ts=2 sw=2 et ai:
 %>
-<p>
-<i class="icon-road"></i> <strong>Track</strong>: <%= l track(item[:track]) %></br>
-<i class="icon-home"></i> <strong>Room</strong>: <%= l room(item[:room]) %></br>
-<i class="icon-calendar"></i> <strong>Day</strong>: <%= l day(item[:day]) %></br>
-<i class="icon-play"></i> <strong>Start</strong>: <%= ltt item[:day], item[:start_time] %></br>
-<i class="icon-stop"></i> <strong>End</strong>: <%= ltt item[:day], item[:start_time] %>
-</p>
-
+<ul class="side-box">
+  <li><i class="icon-road"></i> <strong>Track</strong>: <%= l track(item[:track]) %></li>
+  <li><i class="icon-home"></i> <strong>Room</strong>: <%= l room(item[:room]) %></li>
+  <li><i class="icon-calendar"></i> <strong>Day</strong>: <%= l day(item[:day]) %></li>
+  <li><i class="icon-play"></i> <strong>Start</strong>: <%= ltt item[:day], item[:start_time] %></li>
+  <li><i class="icon-stop"></i> <strong>End</strong>: <%= ltt item[:day], item[:start_time] %></li>
+</ul>
 <br style="clear: both;"/>
 
 <% if item[:abstract] or item[:description] %>
