much improved, smarter and faster breadcrumbs

--- a/content/assets/style/parts/site.css
+++ b/content/assets/style/parts/site.css
@@ -116,3 +116,10 @@ ul.search-results {
 a.quiet {
   color: inherit;
 }
+.speaker-photo {
+  float: left;
+}
+
+.degraded-hint {
+  display: none;
+}
