--- a/layouts/main.html
+++ b/layouts/main.html
@@ -33,6 +33,7 @@ $layout_dateline ||= begin
             <form class="search-form" action="/search/" method="get">
               <div class="input-prepend">
                 <span class="add-on"><i class="icon-search"></i></span>
+                <span class="degraded-hint">Search:</span>
                 <input type="text" name="q" id="q" class="span2" value="" placeholder="Search" />
               </div>
             </form>
