--- a/content/assets/style/parts/design.css
+++ b/content/assets/style/parts/design.css
@@ -7,7 +7,8 @@ body{
 	font:14px/16px "DejaVu Sans", Arial, Helvetica, sans-serif;
 	background:#fff;
 }
-h1, h2, h3, #footer, #header, .visual {
+h1, h2, h3, #footer, #header, .visual,
+tbody h4 {
 	font-family: Signika, "DejaVu Sans", Arial, Helvetica, sans-serif;
 }
 img{border-style:none;}
