--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -57,12 +57,13 @@
   interval = $timetable.first.last.fetch(:interval)
   
   days = $track_flatlist.keys.map(&$to_day)
-  start = days.map{|d| Time.parse(d[:start_time])}.min
-  start_hour = start.hour
+  start = days.reject{|d| d[:start_time].nil?}.map{|d| Time.parse(d[:start_time])}.min
+  if start
+    start_hour = start.hour
 
-  dayend = days.map{|d| Time.parse(d[:end_time])}.max
-  num_cells = dayend.hour - start_hour
-  num_slots = num_cells * (60 / interval)
+    dayend = days.map{|d| Time.parse(d[:end_time])}.max
+    num_cells = dayend.hour - start_hour
+    num_slots = num_cells * (60 / interval)
 %>
 <table class="table table-striped table-bordered table-condensed roomtracks">
   <thead>
@@ -146,6 +147,7 @@
     <%
       end #flatlist_by_room
     end #event_flatlist
+    end #if start
   %>
   </tbody>
 </table>
