--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -24,12 +24,14 @@
   interval = $timetable.first.last.fetch(:interval)
   
   days = $track_flatlist.keys.map(&$to_day)
-  start = days.map{|d| Time.parse(d[:start_time])}.min
-  start_hour = start.hour
+  start = days.reject{|d| d[:start_time].nil?}.map{|d| Time.parse(d[:start_time])}.min
 
-  dayend = days.map{|d| Time.parse(d[:end_time])}.max
-  num_cells = dayend.hour - start_hour
-  num_slots = num_cells * (60 / interval)
+  if start
+    start_hour = start.hour
+    dayend = days.map{|d| Time.parse(d[:end_time])}.max
+    num_cells = dayend.hour - start_hour
+    num_slots = num_cells * (60 / interval)
+
 %>
 <table class="table table-striped table-bordered table-condensed roomtracks">
   <thead>
@@ -139,6 +141,7 @@
     <%
       end #flatlist_by_room
     end #event_flatlist
+    end
     end
   %>
   </tbody>
