use Bootstrap from CDN + add Font Awesome for icons (also from CDN)

--- a/content/assets/style/parts/site.css
+++ b/content/assets/style/parts/site.css
@@ -119,7 +119,9 @@ a.quiet {
 .speaker-photo {
   float: left;
 }
-
+q { font-style: italic; }
+q:before { content: "‘"; }
+q:after { content: "’"; }
 .degraded-hint {
   display: none;
 }
