--- a/layouts/main.html
+++ b/layouts/main.html
@@ -32,7 +32,7 @@ $layout_dateline ||= begin
               <div class="input-prepend">
                 <span class="add-on"><i class="icon-search"></i></span>
                 <span class="degraded-hint">Search:</span>
-                <input type="text" name="q" id="q" class="span2" value="" placeholder="Search" />
+                <input type="text" name="q" id="q" class="span2" value="<% if @item[:search_inject_variable] %><%%= <%= @item[:search_inject_variable] %> %><% end %>"<% unless @item[:search_inject_variable] %> placeholder="Search"<% end %> />
               </div>
             </form>
             </li>
