remove "sponsor" from css classes, causes AdBlock to block

--- a/content/assets/style/parts/design.css
+++ b/content/assets/style/parts/design.css
@@ -208,30 +208,34 @@ fieldset{
 	height:21px;
 	background:url(btn-purple.png) no-repeat;
 }
+a.btn-purple:hover {
+    color: #fff;
+    text-decoration: underline;
+}
 .info-box .btn-purple{margin:3px 0 0 7px;}
 #main{
 	width:968px;
 	margin:0 auto;
 	padding:12px 0 47px 10px;
 }
-.sponsors-block{
+.s-block{
 	padding:6px 8px 24px 11px;
 	overflow:hidden;
 	border-bottom:2px solid #d6d6d6;
 }
-.sponsors-block .text-block{
+.s-block .text-block{
 	padding:5px 0 0;
 	font-size:20px;
 	line-height:26px;
 	float:left;
 	width:615px;
 }
-.sponsors-block h2{
+.s-block h2{
 	margin:0 0 10px;
 	font-size:24px;
 	line-height:28px;
 }
-.sponsors-block p{margin:0;}
+.s-block p{margin:0;}
 .logo-block{
 	float:right;
 	width:307px;
