--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -59,9 +59,9 @@
     <tbody>
         <% item[:speakers].map(&$to_speaker).each do |s| %>
         <tr>
-            <% photo = s[:thumbnail] ? $item_by_id.fetch("/thumbnail/#{s[:thumbnail][:slug]}/") : nil%>
-            <td><% if photo %><a href="<%= speaker(s).path %>"><img class="thumb" height="<%= s[:thumbnail].fetch(:height) %>" width="<%= s[:thumbnail].fetch(:width) %>" src="<%= photo.path %>"/></a><% end %></td>
-            <td><%= l s %></td>
+          <% photo = s[:thumbnail] ? $item_by_id.fetch(s[:thumbnail][:identifier]) : nil %>
+          <td><% if photo %><a href="<%= speaker(s).path %>"><img class="thumb" height="<%= photo[:height] %>" width="<%= photo[:width] %>" src="<%= photo.path %>"/></a><% end %></td>
+          <td><%= l s %></td>
         </tr>
         <% end %>
     </tbody>
@@ -73,8 +73,7 @@
   <ul class="event-attachments unstyled">
     <%
       item[:attachments].each do |a|
-        ai = $attachments_by_export[a[:filename]]
-        raise "failed to find attachment item for export name #{a[:filename]}" unless ai
+        ai = $item_by_id.fetch(a[:identifier])
         title = a[:title] ? a[:title] : ai[:title]
         icon = case ai[:media]
                when 'slides'
@@ -89,7 +88,7 @@
                  'download'
                end
       %>
-      <li><i class="icon-<%= icon %>"></i> <a href="attachments/<%= ai[:localname] %>"><%= title %> (<%= ai[:media] %>)</a></li>
+      <li><i class="icon-<%= icon %>"></i> <a href="<%= ai.path %>"><%= title %> (<%= ai[:type] %>)</a></li>
     <% end %>
   </ul>
 <% end %>
