implement event logos

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -362,3 +362,9 @@ ul.side-box {
 #main p {
     line-height: 1.4;
 }
+
+.event-logo {
+  float: left;
+  margin-right: 1em;
+  margin-bottom: 0.3em;
+}
