--- a/layouts/fullpage.html
+++ b/layouts/fullpage.html
@@ -1,20 +1,22 @@
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="generator" content="nanoc">
-        <meta http-equiv="content-type" content="text/html;charset=utf-8">
-        <link rel="shortcut icon" href="<%= $item_by_id['/favicon/'].path %>" type="image/x-icon" />
-        <link type="text/css" rel="stylesheet" media="screen" href="<%= $item_by_id['/assets/style/fosdem/'].path %>"/>
-        <link href="<%= $item_by_id['/atom/'].path %>" type="application/atom+xml" rel="alternate" title="FOSDEM ATOM Feed"/>
-        <% (@item[:alternative_representations] or []).each do |alt| %>
-        <link type="<%= alt[:mime] %>" rel="alternate" title="<%= alt[:title] %>" href="<%= $item_by_id[alt[:item]].path %>" />
-        <% end %>
-        <title>FOSDEM<% if @item[:title] %> - <%= @item[:title] %><% end %></title>
-	</head>
-	<body class="fullpage">
-        <!-- content/ -->
-        <%= yield %>
-        <!-- /content -->
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+  <head profile="http://a9.com/-/spec/opensearch/1.1/">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="generator" content="nanoc"/>
+    <link rel="shortcut icon" href="<%= pathof '/favicon/' %>" type="image/x-icon" />
+    <link media="all" rel="stylesheet" type="text/css" href="<%= pathof '/assets/style/fosdem/' %>" />
+    <link href="<%= pathof '/atom/' %>" type="application/atom+xml" rel="alternate" title="<%= conference()[:title] %> ATOM Feed"/>
+    <link href="<%= pathof '/opensearch/' %>" type="application/opensearchdescription+xml" title="<%= conference()[:title] %> Search"/>
+    <% (@item[:alternative_representations] or []).each do |alt| %>
+      <link type="<%= alt[:mime] %>" rel="alternate" title="<%= alt[:title] %>" href="<%= $item_by_id[alt[:item]].path %>" />
+    <% end %>
+    <% if @item[:head_erb_injection] %><%%= <%= @item[:head_erb_injection] %> %><% end %>
+    <title><%= conference()[:title] %><% if @item[:title] %> - <%= @item[:title] %><% end %></title>
+  </head>
+  <body class="fullpage">
+    <!-- content/ -->
+    <%= yield %>
+    <!-- /content -->
+  </body>
 </html>
