--- a/layouts/main.html
+++ b/layouts/main.html
@@ -13,6 +13,7 @@ $layout_dateline ||= begin
     <link rel="shortcut icon" href="<%= pathof '/favicon/' %>" type="image/x-icon" />
     <link media="all" rel="stylesheet" type="text/css" href="<%= pathof '/assets/style/fosdem/' %>" />
     <link href="<%= pathof '/atom/' %>" type="application/atom+xml" rel="alternate" title="<%= conference()[:title] %> ATOM Feed"/>
+    <link href="<%= pathof '/rss/' %>" type="application/rss+xml" rel="alternate" title="<%= conference()[:title] %> RSS Feed"/>
     <link href="<%= pathof '/opensearch/' %>" type="application/opensearchdescription+xml" title="<%= conference()[:title] %> Search"/>
     <% (@item[:alternative_representations] or []).each do |alt| %>
       <link type="<%= alt[:mime] %>" rel="alternate" title="<%= alt[:title] %>" href="<%= $item_by_id[alt[:item]].path %>" />
