html validator fixes

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -92,7 +92,7 @@ $layout_dateline ||= begin
                            [ '#', nil ]
                          end
             %>
-            <li class="link<%= i + 1 %>"><a href="<%= url %>"<% if alt %> description="<%= alt %>"<% end %>><%= label %></a></li>
+            <li class="link<%= i + 1 %>"><a href="<%= url %>"<% if alt %> title="<%= alt %>"<% end %>><%= label %></a></li>
             <% end %>
           </ul>
           <div class="visual-info">
