--- a/layouts/main.html
+++ b/layouts/main.html
@@ -60,7 +60,7 @@ $layout_dateline ||= begin
       <div class="visual">
         <div class="visual-shadow">&nbsp;</div>
         <div class="visual-image">
-          <%= img($item_by_id.fetch('/assets/style/img1/')) %>
+          <%= img('/assets/style/img1/', alt: '') %>
         </div>
         <div class="visual-content">
           <ul class="visual-panel">
