rename img1 asset to fosdem-home-visual

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -60,7 +60,7 @@ $layout_dateline ||= begin
       <div class="visual">
         <div class="visual-shadow">&nbsp;</div>
         <div class="visual-image">
-          <%= img('/assets/style/img1/', alt: '') %>
+          <%= img('/assets/style/fosdem-home-visual/', alt: '') %>
         </div>
         <div class="visual-content">
           <ul class="visual-panel">
