--- a/content/assets/style/sprite.erb
+++ b/content/assets/style/sprite.erb
@@ -5,15 +5,13 @@ extension: png
 <%=
   # vim: set ts=2 sw=2 et ai ft=eruby:
 
-require 'RMagick'
-
 logos = sponsors.select{|s| s.cornerstone? ? s.logo? : s.thumb? }.map do |s|
   logo = if s.cornerstone?
            s.logo
          else
            s.thumb
          end
-  Magick::Image.from_blob(IO.read(logo[:filename])).first
+  logo[:filename]
 end
 
 # add fosdem and ULB logos to the sprite
@@ -21,42 +19,9 @@ end
   '/assets/style/fosdem-logo/',
   '/assets/style/ulb/',
 ].map(&$to_item).each do |i|
-  logos << Magick::Image.from_blob(IO.read(i[:filename])).first
+  logos << i
 end
 
-height = logos.map{|l| l.rows}.inject(:+)
-width  = logos.map{|l| l.columns}.max
-
-sprite = Magick::Image.new(width, height) do
-  self.format = 'PNG'
-  self.background_color = 'transparent'
-end
-
-y = 0
-logos.each do |image|
-  sprite.composite!(image, 0, y, Magick::OverCompositeOp)
-  y += image.rows
-end
-
-temp = nil
-begin
-  require 'image_optim'
-  io = ImageOptim.new(pngout: false, advpng: false, jpegoptim: false, gifsicle: false, jpegtran: false)
-  require 'tempfile'
-  temp = Tempfile.new("unoptimized-#{@item[:filename]}".gsub(%r{/+}, '_'))
-  temp.write(sprite.to_blob)
-  temp.flush
-  io.optimize_image!(temp.path)
-  temp.rewind
-  temp.read
-ensure
-  if temp
-    begin
-      temp.close
-    ensure
-      temp.unlink
-    end
-  end
-end
+sprite_image(logos, 'PNG', true)
 
 %>
